Fixed featured tea grid spacing
Changed the justify-content attribute within .tea-grid to be center, and added margins to .tea-grid img

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -94,7 +94,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     width: 1000px;
-    justify-content: space-between;
+    justify-content: center;
     margin: 0 auto;
 }
 
@@ -105,6 +105,7 @@ main {
 .tea-grid img {
     width: 300px;
     height: 200px;
+    margin: 0.5rem 1rem 1rem 1rem;
 }
 
 /* locations section */
